@@ -22,6 +22,7 @@
   - ReplSet/ReplSetServers emits "fullsetup" when all servers have been connected to
 - Prevent callback from executing more than once in getMore function (Issue #631, https://github.com/shankar0306)
 - Corrupt bson messages now errors out to all callbacks and closes up connections correctly, Issue #634
+- Replica set member status update when primary changes bug (Issue #635, https://github.com/alinsilvian)
 
 1.0.2 2012-05-15
 ----------------
